# quickpde

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml
conf/env/: greene.yaml  local.yaml  nrel.yaml
docs/: .gitignore  Makefile  RDE.md  Rotation2d.md  ShallowWater2d.md  Vorticity.md  Wave2d.md  conf.py  index.md
docs/api/: index.rst
quickpde/: cli.py  config.py  derivs.py  diagnostics.py  diagnostics_jax.py  driver.py  grid.py  initial_conditions.py  odesolve.py  pdes.py  util.py
quickpde/apps/: postprocessing.py
quickpde/config/: __init__.py  base.py  defaults.py
test/: test_derivatives.py  test_grf.py
tests/: conftest.py  test_derivs.py  test_diagnostics.py  test_odes.py  test_pdes.py  test_storage.py
