[project]
name = "quickpde"
description = ""
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

dependencies = [
  "numpy",
  "jax",
  "h5py",
  "matplotlib",
  "hydra-core",
  "hydra-submitit-launcher",
  "humanize",
  "pandas",
  "seaborn",
  "imageio[ffmpeg] (>=2.37.2,<3.0.0)",
]

[project.optional-dependencies]
dev = [
  "pylint>=2.6.0",
  "yapf",
  "pytest",
  "isort",
  "sphinx",
  "furo",
  "myst-parser",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "sphinx-mathjax-offline",
  "sphinx-autobuild"
]

[tool.setuptools]
packages = ["quickpde"]
